tried to fix horizontal scroll issue with overflow-x hidden

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 body {
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 /* Header */
@@ -14,7 +15,7 @@ body {
 	flex-wrap: nowrap;
 	align-items: baseline;
 	height: 110px;
-	width: 100%;
+	max-width: 100%;
 }
 
 .name-container {
@@ -46,7 +47,7 @@ body {
 
 .header-body-divider {
 	height: 2.5px;
-	width: 100%;
+	max-width: 100%;
 	background-color: #7d97ad;
 }
 
